; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/mods/extr_pybrtc.c_pyb_rtc_calc_future_time.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/mods/extr_pybrtc.c_pyb_rtc_calc_future_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pyb_rtc_calc_future_time(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = call i32 @pyb_rtc_get_time(i32* %7, i32* %8)
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %4, align 4
  %12 = sdiv i32 %11, 1000
  %13 = add nsw i32 %10, %12
  %14 = load i32*, i32** %5, align 8
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* %4, align 4
  %16 = srem i32 %15, 1000
  %17 = load i32*, i32** %6, align 8
  store i32 %16, i32* %17, align 4
  %18 = load i32, i32* %8, align 4
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @rtc_msec_add(i32 %18, i32* %19, i32* %20)
  ret void
}

declare dso_local i32 @pyb_rtc_get_time(i32*, i32*) #1

declare dso_local i32 @rtc_msec_add(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
